--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.Header-Container{
+  display: flex;
+  height : 30%;
+  width : 100%;
+  background-color:antiquewhite;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2% 5%;
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 1; 
+}
+.Logo-Container{
+  width :auto
+}
+.Logo {
+  height: 170px;
+  width: 320px;
+}
+.Navigation-Container{
+  width: 50%
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Navigation-Container ul li:hover{ 
+  transform: scale(1.2);
+  transition: ease-in-out(0.5s);
+  
 }
+.Navigation-Container ul{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+}
+
+.cart{
+  height: 30px;
+  width: 30px;
+ 
+}
+.notification{
+  height: 30px;
+  width: 30px;
+ 
+}
+
+
