--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ body{
   margin-top: 2%;
 }
 .Navigation-Container{
-  width: 50%
+  width: 50%;
+  margin-right :3%
 }
 
 .Navigation-Container ul li:hover{ 
@@ -134,3 +135,99 @@ color:
 .sizes{
   margin-top: 2%;
 }
+
+.filter{
+  z-index: 3;
+  margin-left: 5%;
+  height: 10%;
+}
+
+.search-filter-Container{
+  display: flex;
+  margin-left: 3%;
+  margin-top: 3%;
+}
+.search-icon-image{
+  height: 200px;
+  width: 200px;
+}
+.input{
+  height: 30px;
+  width: 30%;
+}
+.search-Button{
+  height: 40px;
+  margin-left: 2%;
+  background-color:
+#333;
+}
+
+/* Style for the search container */
+.search-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Style for the search input */
+.search-input {
+  width: 200px; /* Adjust the width as needed */
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  outline: none;
+  font-size: 16px;
+  color: #fff;
+  background-color: #333;
+  transition: border-color 0.3s ease; /* Animation for input border */
+}
+
+/* Style for the search button */
+.search-button {
+  background-color: #333;
+  margin-left: 0.5%;
+  border-radius: 4px;
+  width: 4%;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.3s ease; /* Animation for button transform */
+}
+
+/* Style for the search icon */
+.search-button i {
+  font-size: 20px;
+  color: #0a0a0a; /* Color of the search icon */
+}
+
+/* Animation on hover for input */
+.search-input:hover {
+  box-shadow: 0px 4px 8px rgba(255, 246, 246, 0.55); 
+}
+
+/* Animation on hover for button */
+.search-button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 4px 8px rgba(255, 246, 246, 0.55); /* Scale up the button on hover */
+}
+
+.search-icon{
+  height: 100%;
+  width: 110%;
+}
+.Login{
+  color: #fff;
+  background-color:#333;
+  border:none; 
+  border-radius: 4px;
+  padding:10px 20px;
+  cursor:pointer; 
+  transition: background-color 0.2s,color 0.2s;
+  margin-right: 2%;
+ 
+  font-size:14px;
+}
+.Login:hover{
+  background-color:#555;
+  color:#fff;
+  
+}
+
